Solve overflow problem for first and last menu item

--- a/dropdown_menu/style.css
+++ b/dropdown_menu/style.css
@@ -15,6 +15,16 @@ body {
   border-bottom: 1px solid #CFCFCF;
 }
 
+.menu__main__item:first-child:hover {
+  border-left: none;
+  margin-left: 0;
+}
+
+.menu__main__item:last-child:hover {
+  border-right: none;
+  margin-right: 0;
+}
+
 .menu__main__item:hover {
   background: white;
   border-bottom: none;
